<resources>
    <string name="app_name">FIX IT</string>
    <string name="image_illustration">image illustration</string>
    <string name="app_title">Aplikasi Input Stok Barang</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="mulai">Mulai</string>
    <string name="hisotry">History</string>
    <string name="dashboard_illustration">dashboard illustration</string>
    <string name="nomor_seri">Nomor Seri</string>
    <string name="nama">Nama</string>
    <string name="tanggal_masuk">Tanggal Masuk</string>
    <string name="stok">Stok</string>
    <string name="komputer">Komputer</string>
    <string name="laptop">Laptop</string>
    <string name="selanjutnya">Selanjutnya</string>
    <string name="sebelumnya">Sebelumnya</string>
    <string name="kategori_2">Kategori 2</string>
    <string name="kategori_1">Kategori 1</string>
    <string name="aktif">Aktif</string>
    <string name="selamat_datang">Selamat Datang</string>
    <string name="guest">Guest</string>
    <string name="setting">Settings</string>
    <string name="permissions">Permissions</string>
    <string name="camera">Camera</string>
    <string name="location">Location</string>
    <string name="file_manager">File Manager</string>
    <string name="question1">1. Apa yang terjadi ketika perangkat anda dinyalakan untuk pertama kali?</string>
    <string name="question1_answer1">Tidak terjadi apa apa</string>
    <string name="question1_answer2">Hanya layar hitam, indikator harddisk menyala</string>
    <string name="question1_answer3">Terdapat pesan error \"Boot not found\"</string>
    <string name="question1_answer4">Menyala sebentar lalu mati lagi</string>
    <string name="question1_answer5">Tidak dapat dinyalakan</string>
    <string name="question2">2. Apakah perangkat anda dapat booting ke sistem operasi (seperti windows, linux)?</string>
    <string name="question2_answer1">Ya, perangkat saya dapat masuk ke dalam sistem operasi</string>
    <string name="question2_answer2">Ya, perangkat saya dapat masuk ke dalam sistem operasi, namun tak lama terjadi \"bluescreen\"</string>
    <string name="question2_answer3">Ya, namun keyboard atau mouse tidak dapat berfungsi</string>
    <string name="question2_answer4">Tidak, dan terdapat pesan error \"Boot not found\"</string>
    <string name="question2_answer5">Tidak, dan tidak terdapat pesan error</string>
    <string name="question3">3. Biasanya perangkat anda digunakan untuk apa?</string>
    <string name="question3_answer1">Pekerjaan kantor (word, exel, dll)</string>
    <string name="question3_answer2">Bermain game berat (Game Triple-A)</string>
    <string name="question3_answer3">Bermain game ringan</string>
    <string name="question3_answer4">Pekerjaan desain grafis (after effect, photoshop, dll)</string>
    <string name="question3_answer5">Perangkat saya sudah lama tidak digunakan</string>
    <string name="question4">4. Perangkat keras (hardware) apa yang pernah anda ganti atau upgrade?</string>
    <string name="question4_answer1">Harddisk / RAM / SSD</string>
    <string name="question4_answer2">CPU / GPU</string>
    <string name="question4_answer3">Motherboard</string>
    <string name="question4_answer4">Semua perangkat keras diatas</string>
    <string name="question4_answer5">Saya tidak pernah mengganti atau meng-upgrade perangkat keras</string>
    <string name="question5">5. Berapa umur perangkat anda?</string>
    <string name="question5_answer1">&lt; 1 Tahun</string>
    <string name="question5_answer2">1 Tahun ~ 2 Tahun</string>
    <string name="question5_answer3">2 Tahun ~ 3 Tahun</string>
    <string name="question5_answer4">3 Tahun ~ 5 Tahun</string>
    <string name="question5_answer5">&gt; 5 Tahun</string>
    <string name="menu_utama">Menu Utama</string>
    <string name="kerusakan">kerusakan</string>
    <string name="about">About</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>