<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--<item
        android:id="@+id/item1"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="Item 1"
        app:showAsAction="ifRoom" />-->

    <!--<item
        android:id="@+id/item2"
        android:title="Item 2"
        app:showAsAction="never" />-->

    <item
        android:id="@+id/menuItemSetting"
        android:title="@string/setting"
        app:showAsAction="never">

        <menu>

            <item
                android:id="@+id/subMenuItemPermission"
                android:title="@string/permissions"/>

        </menu>

    </item>

    <item
        android:id="@+id/menuItemAbout"
        android:title="@string/about"
        app:showAsAction="never" />

</menu>