<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.Form2Activity"
    android:orientation="vertical">

    <include
        layout="@layout/_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvQuestion"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/question2"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="251dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:layout_constraintStart_toStartOf="@+id/tvQuestion"
                app:layout_constraintTop_toBottomOf="@+id/tvQuestion">

                <RadioButton
                    android:id="@+id/rbAnswer1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question2_answer1"
                    tools:layout_editor_absoluteX="31dp"
                    tools:layout_editor_absoluteY="88dp" />

                <RadioButton
                    android:id="@+id/rbAnswer2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question2_answer2"
                    tools:layout_editor_absoluteX="31dp"
                    tools:layout_editor_absoluteY="136dp" />

                <RadioButton
                    android:id="@+id/rbAnswer3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question2_answer3"
                    tools:layout_editor_absoluteX="31dp"
                    tools:layout_editor_absoluteY="136dp" />

                <RadioButton
                    android:id="@+id/rbAnswer4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question2_answer4"
                    tools:layout_editor_absoluteX="31dp"
                    tools:layout_editor_absoluteY="136dp" />

                <RadioButton
                    android:id="@+id/rbAnswer5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question2_answer5"
                    tools:layout_editor_absoluteX="31dp"
                    tools:layout_editor_absoluteY="136dp" />
            </RadioGroup>

            <Button
                android:id="@+id/btnPrevious"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sebelumnya"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btnNext"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/btnNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/selanjutnya"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btnPrevious"
                app:layout_constraintTop_toTopOf="@+id/btnPrevious"
                tools:ignore="TextContrastCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>